<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geeko.proto.ijkproject.AppStarterActivity$UserDerailFragment" >

    <TextView
        android:id="@+id/tv_String_Profile_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_profile_image"
        android:textSize="@dimen/string_size_small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#FFDDDDDD" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <ImageView
            android:id="@+id/iv_Detail_Profile_Image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_person" />

        <ImageView
            android:id="@+id/iv_Detail_Profile_Camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/iv_Detail_Profile_Image"
            android:src="@android:drawable/ic_menu_camera" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_String_Profile_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_profile_name"
        android:textSize="@dimen/string_size_small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#FFDDDDDD" />

    <com.geeko.proto.ijkproject.app.widgets.ClearableEditText
        android:id="@+id/cet_Detail_Profile_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_String_Profile_Region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_profile_region"
        android:textSize="@dimen/string_size_small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#FFDDDDDD" />

    <com.geeko.proto.ijkproject.app.widgets.ClearableEditText
        android:id="@+id/cet_Detail_Profile_Region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_String_Profile_Period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_profile_period"
        android:textSize="@dimen/string_size_small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#FFDDDDDD" />

    <com.geeko.proto.ijkproject.app.widgets.ClearableEditText
        android:id="@+id/cet_Detail_Profile_Period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_String_Profile_Machine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_profile_machine"
        android:textSize="@dimen/string_size_small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#FFDDDDDD" />

    <com.geeko.proto.ijkproject.app.widgets.ClearableEditText
        android:id="@+id/cet_Detail_Profile_Machine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>